--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ test.py
 # driver
 /driver/*
 
+# notebook, myutil.py
+*.ipynb
+myutil.py
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
